# githubactions-practice

./: pyproject.toml
.github/workflows/: ci.yml
src/calculation/: calculator.py
tests/: test_calculation.py
