[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poetry]
name = "githubactions-practice"
version = "0.1.0"
description = "prictice of github actions with python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
